--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-chromeTemp
 .vscode
+**/chromeTemp
+**/__pycache__
 frames.json
 transcript_en.json
 transcript_jp.json
 transcript_romaji.json
-**/__pycache__
